mutants.out/log/src__proto__single__resp.rs_line_239_col_9.log

*** src/proto/single/resp.rs:239:9: replace <impl From for RawResponse>::from -> Self with Default::default()

*** mutation diff:
--- src/proto/single/resp.rs
+++ replace <impl From for RawResponse>::from -> Self with Default::default()
@@ -231,17 +231,17 @@
         .into()),
     }
 }
 
 // these are mostly for convenience for testing
 
 impl<'a> From<&'a str> for RawResponse {
     fn from(s: &'a str) -> Self {
-        RawResponse::String(s.to_string())
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl From<isize> for RawResponse {
     fn from(i: isize) -> Self {
         RawResponse::Number(i)
     }
 }


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0277]: the trait bound `RawResponse: Default` is not satisfied
   --> src/proto/single/resp.rs:239:9
    |
239 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `RawResponse`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
